# stair_perception

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml
include/pcl/apps/: fast_meshing.h  stairdetectiondemo.h  stairdetector.h
include/pcl/apps/impl/: stairdetectiondemo.hpp
include/pcl/common/: color.h  commons.h  edges_common.h  fhg_point_types.h  incremental_plane_fitting.h  linesegment2d_common.h  linesegment3d_common.h  math.h  mesh_utilities.h  motime.h  noise_model.h  pcl_commons.h  point_common.h  time.h
include/pcl/common/impl/: fhg_point_types.hpp
include/pcl/histogram/: abstract_histogram.h  linesegment3dhistogram.h  linesegmenthistogram.h  planehistogram.h
include/pcl/io/: globfitwriter.h  mo_io.h  mopcd_io.h
include/pcl/io/impl/: mo_io.hpp
include/pcl/kdtree/: fixed_neighbors.h
include/pcl/kdtree/impl/: fixed_neighbors.hpp
include/pcl/models/: edges2planesfactory.h  globalmodel.h  localmodel.h  localmodelfactory.h  model_utils.h  modelsampler.h
include/pcl/opencv/: cvutils.h  edge_detection_utils.h  edgesdetector.h  imageconcat.h  linesegment2d.h  linesegment2dhistogram.h
include/pcl/registration/: icp_dirk.h  myicp.h  registration_dirk.h
include/pcl/segmentation/: planesegmentation.h  region_segmentation.h
include/pcl/segmentation/impl/: region_segmentation.hpp
include/pcl/surface/: surface_functions.h  surface_utils.h
include/pcl/types/: boundingbox.h  linesegment3d.h  plane3d.h  plane3d_utils.h  riser.h  step.h  tread.h  types.h
include/pcl/types/impl/: linesegment3d.hpp
include/pcl/utils/: pointcloud_utils.h
include/pcl/visualization/: registration_visualizer2.h
include/pcl/visualization/impl/: registration_visualizer2.hpp
launch/: camera.launch  camera_to_images.launch  formatpcd.launch  nodelet_smartplane.launch  playground.launch  test_fpe.launch  test_fpe2.launch
pcds/: 1347691665.301914845.pcd  1347691665.569951841.pcd
src/: binding_lib.cpp  fhg_binding_common.cpp  fhg_binding_features.cpp  fhg_binding_filters.cpp  fhg_binding_kdtree.cpp  fhg_binding_registration.cpp  fhg_binding_sac.cpp  fhg_binding_search.cpp  fhg_binding_segmentation.cpp  fhg_binding_surface.cpp  fhg_binding_visualization.cpp  fhg_bindings.cpp  fhg_pcl.cpp
src/pcl/: fhg_apps.cpp  fhg_common.cpp  fhg_histogram.cpp  fhg_io.cpp  fhg_kdtree.cpp  fhg_models.cpp  fhg_opencv.cpp  fhg_registration.cpp  fhg_segmentation.cpp  fhg_surface.cpp  fhg_types.cpp  fhg_utils.cpp
src/pcl/apps/: blackbg_to_white.cpp  contours.cpp  normalsvis.cpp  pcd_to_normalsimg.cpp  pcd_to_rgb.cpp  pdd.cpp  playground.cpp  resultsparser.cpp  smooth.cpp  stairdetectorpcds.cpp
src/pcl/kdtree/: fixed_neighbors.cpp
tests/: binding_test.cpp  icp_vis.cpp  playground.cpp  test_fpe.cpp
